[package]
name = "lc3-backend"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]
rust-version = "1.80"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
crossbeam-channel = "0.5.12"
lc3-ensemble = "0.6.0"
neon = "1"