[package]
name = "lc3-backend"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]
rust-version = "1.80"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc3-ensemble = "0.10.0"
miette = { version = "7.6.0", features = ["fancy"] }
neon = "1"
owo-colors = "4.2.0"
