[package]
name = "lc3-backend"
version = "0.1.0"
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
lc3-ensemble = { git = "https://github.com/endorpersand/lc3-ensemble.git", version = "0.1.0" }
neon = "1"
once_cell = "1.19.0"
